test/langtools/tools/javac/valhalla/value-objects/ValueAnnotationTest.out
ValueAnnotationTest.java:10:50: compiler.err.cant.inherit.from.final: ValueAnnotationTest.X
ValueAnnotationTest.java:11:28: compiler.err.cant.inherit.from.final: ValueAnnotationTest.Y
ValueAnnotationTest.java:10:34: compiler.err.concrete.supertype.for.value.class: ValueAnnotationTest.Y, ValueAnnotationTest.X
ValueAnnotationTest.java:11:12: compiler.err.identity.type.has.value.super.type: ValueAnnotationTest.Z, ValueAnnotationTest.Y
4 errors
